# fairaware

./: Dockerfile  package.json  pyproject.toml  start.sh
conf/: .secrets.toml  settings.toml
src/: commons.py  main.py  protected.py  public.py
src/frontend/: README.md  next.config.js  package.json
src/frontend/app/: page.tsx
src/frontend/app/_components/: Step.tsx  StepsWrapper.tsx
